@@ -23,12 +23,12 @@ repositories {
 
 dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.13.2'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.13.2.1'
     compile 'org.apache.logging.log4j:log4j-api:2.17.2'
     compile 'org.apache.logging.log4j:log4j-core:2.17.2'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.12.0.0'
-    compile 'org.springframework:spring-beans:5.3.6'
-    compile 'org.springframework:spring-jdbc:5.3.6'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.13.0.0'
+    compile 'org.springframework:spring-beans:5.3.7'
+    compile 'org.springframework:spring-jdbc:5.3.7'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
